# text-to-tokenized-video

./: .gitignore  Makefile  README.md  pyproject.toml  tokenize_dataset.py  tokenize_sample.py
.github/workflows/: lint.yaml  test.yaml
cli/: decode_tokens.py  encode_dataset.py  encode_video.py
cli/checkpoints/Cosmos-1.0-Tokenizer-DV8x16x16/: .gitattributes  README.md  autoencoder.jit  config.json  decoder.jit  encoder.jit  model_config.yaml
cosmos_tokenizer/: cosmos_tokenizer.py  decode_tokens.py  encode_video.py  tokenize_all.sh
gloss2text/: generatecsv.py  inference_test.py  phoenix_translation_dev.json  phoenix_translation_train.json
min_repro/: config_minimal.yaml
min_repro/autotrain-data/: train.jsonl
min_repro/min-smollm-debug/: README.md  adapter_config.json  tokenizer_config.json  training_params.json
min_repro/min-smollm-debug/autotrain-data/train/: data-00000-of-00001.arrow
min_repro/min-smollm-debug/autotrain-data/validation/: state.json
min_repro/min-smollm-debug/runs/Dec02_19-55-19_u20-chiihm0-617/: events.out.tfevents.1764701728.u20-chiihm0-617.3358852.0
scripts/: build_gloss_tokenizer.py  config_smollm1B.yaml  config_smollm301.yaml  eval_video2gloss_seq2seq.py  gloss_tokenizer.json  train_gloss_model.py  trainv2g.py  video2gloss_overfit.csv  video2gloss_seq2seq.py  videotogloss_datasetbuilder.py
scripts/gloss2text/: gloss2text_datasetbuilder.py  script.sh
scripts/gloss2video/: gloss2video_datasetbuilder.py  script.sh
scripts/text2video/: reshape_example_video.py  script.sh  text2video_datasetbuilder.py
scripts/video2gloss/: script.sh  video2gloss_datasetbuilder.py
scripts/video2gloss/lstm/: video2gloss_eval_lstm.py  video2gloss_train_lstm.py
slurmjobs/: config_smollm.yaml  config_smollm2.yaml  config_smollm3.yaml  config_smollm301.yaml  train_smollm.slurm  train_smollm3.slurm  trainlm.slurm
tests/: test_encode_decode.py
text_to_tokenized_video/tokenizer/: README.md  encode_video.py  tokenize_dataset.sh  tokenizer_posttrain_phoenix.py
video2gloss/: video2gloss_datasetbuilder.py  video2gloss_eval.py  video2gloss_train_lstm.py
