[project]
name = "text-to-tokenized-video"
description = "Translate from spoken language text into tokenized Sign Language video."
version = "0.0.1"
authors = [
    { name = "Maritina Panagiotopoulou", email = "mariachristina.panagiotopoulou@uzh.ch" },
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
    "numpy",
    "mediapy",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
cosmos = [
    "loguru",
    "einops",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C90", # mccabe complexity
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "PT", # flake8-pytest-style
    "W605", # invalid escape sequence
    "BLE", # flake8-blind-except
    "TRY", # tryceratops
]

[tool.setuptools]
packages = [
    "text_to_tokenized_video",
    "text_to_tokenized_video.tokenizer",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["text_to_tokenized_video"]
